Fixed many binding issues